<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginBottom="18dp"
    android:layout_marginTop="18dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/colorAccent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="@string/ingredients"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="52dp"
            android:text="@string/ingredients"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ingr_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="52dp"
            android:text="@string/name"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tv_ingredients"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/measure"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredients"
             />

        <TextView
            android:id="@+id/tv_measure_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tv_measure"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingr_name" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/quantity"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_measure" />

        <TextView
            android:id="@+id/tv_quantity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tv_quantity"
            app:layout_constraintTop_toBottomOf="@+id/tv_measure_name" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>